node_security.tf
resource "aws_security_group" "kubernetes-node" {
  name = "terraform-eks-kubernetes-node"
  description = "security group for all nodes in cluster"
  vpc_id = "${aws_vpc.kubernetes-vpc.id}"

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = "${
    map(
      "Name", "terraform-eks-kubernetes-node",
      "kubernetes.io/cluster/${var.cluster-name}", "owned"
    )
  }"
}

resource "aws_security_group_rule" "kubernetes-node-ingress-self" {
  description = "Allow nodes to communicate with each other"
  from_port = 0
  protocol = "-1"
  security_group_id = "${aws_security_group.kubernetes-node.id}"
  source_security_group_id = "${aws_security_group.kubernetes-node.id}"
  to_port = 65535
  type = "ingress"
}

resource "aws_security_group_rule" "kubernetes-node-ingress-cluster" {
  description = "Allow worker kubelets and pods to receive communication from the cluster control plane"
  from_port = 1025
  protocol = "tcp"
  security_group_id = "${aws_security_group.kubernetes-node.id}"
  source_security_group_id = "${aws_security_group.kubernetes-cluster.id}"
  to_port = 65535
  type = "ingress"
}

resource "aws_security_group_rule" "kubernetes-cluster-ingress-node-https" {
  description = "Allow pods to communicate with the cluster API server"
  from_port = 443
  protocol = "tcp"
  security_group_id = "${aws_security_group.kubernetes-cluster.id}"
  source_security_group_id = "${aws_security_group.kubernetes-node.id}"
  to_port = 443
  type = "ingress"
}
